--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.1"
@@ -18,7 +18,11 @@ android {
         }
     }
 }
-
+apt {
+    arguments {
+        moduleName project.getName();
+    }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -50,4 +54,8 @@ dependencies {
     // log依赖
     compile 'com.orhanobut:logger:1.15'
 
+    apt 'com.alibaba:arouter-compiler:1.1.1'// 阿里开源路由跳转
+    compile 'com.alibaba:arouter-api:1.1.1'// 阿里开源路由跳转
+
+    compile 'xiaofei.library:android-data-storage:1.3.0'// 饿了么持久化框架
 }
