--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -7,6 +7,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:8.8.1'
@@ -23,7 +24,7 @@ dependencies {
     implementation 'commons-io:commons-io:20030203.000550'
     // log依赖
     implementation 'com.orhanobut:logger:2.2.0'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.4.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:+'
     // 阿里开源路由跳转
     implementation 'com.alibaba:arouter-api:1.4.0'
     // 阿里开源路由跳转
@@ -37,4 +38,7 @@ dependencies {
     implementation 'com.hyphenate:hyphenate-sdk:3.5.5'
     implementation project(':easeui')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'cn.jiguang.sdk:jpush:3.2.0'
+    implementation 'cn.jiguang.sdk:jcore:1.2.7'
 }
