--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.facebook.fresco:fresco:0.14.1'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
     // 语音识别相关的依赖
     implementation 'ai.api:sdk:1.10.0@aar'
     //    implementation 'ai.api:libai:1.2.1'
@@ -41,4 +41,6 @@ dependencies {
 
     implementation 'cn.jiguang.sdk:jpush:3.2.0'
     implementation 'cn.jiguang.sdk:jcore:1.2.7'
+    // 阿里热修复方案
+    implementation 'com.aliyun.ams:alicloud-android-hotfix:3.2.8'
 }
