--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,7 +145,9 @@
             android:enabled="true"
             android:exported="false">
         </service>
-        <service android:name=".services.CoreService"/>
+        <service android:name=".services.RemoteCoreService" android:process="com.qy.core"/>
+        <service android:name=".services.CoreService"
+            android:exported="false"/>
 
         <!-- Required SDK 核心功能-->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver"/>
