--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -18,24 +18,24 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:10.1.0'
-    implementation 'com.facebook.fresco:fresco:0.14.1'
+    implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     // 语音识别相关的依赖
     implementation 'ai.api:sdk:1.10.0@aar'
     //    implementation 'ai.api:libai:1.2.1'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'commons-io:commons-io:20030203.000550'
     // log依赖
     implementation 'com.orhanobut:logger:2.2.0'
+    // 阿里开源路由跳转
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
     // 阿里开源路由跳转
     implementation 'com.alibaba:arouter-api:1.4.0'
-    // 阿里开源路由跳转
-    implementation 'org.greenrobot:greendao:3.2.2'
     // 数据持久化相关 greendao
-    implementation 'org.litepal.android:java:3.0.0'
+    implementation 'org.greenrobot:greendao:3.2.2'
     // 数据持久化 litepal
+    implementation 'org.litepal.android:java:3.0.0'
     // 集成环信即时通讯
     //Optional compile for GCM (Google Cloud Messaging).
     implementation 'com.google.android.gms:play-services-gcm:11.4.0'
@@ -47,4 +47,10 @@ dependencies {
     implementation 'cn.jiguang.sdk:jcore:1.2.7'
     // 阿里热修复方案
     implementation 'com.aliyun.ams:alicloud-android-hotfix:3.2.8'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+
+    //dagger 依赖
+    implementation 'com.google.dagger:dagger:2.22.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.22.1'
 }
