--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -65,4 +65,5 @@ dependencies {
     annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.3.1"
     // 腾讯的ui库
     implementation 'com.qmuiteam:qmui:1.2.0'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 }
