--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,11 @@ android {
             version "3.10.2"
         }
     }
+    packagingOptions {
+        pickFirst 'edl-v10.html'
+        pickFirst 'epl-v10.html'
+        pickFirst 'notice.html'
+    }
     useLibrary 'org.apache.http.legacy'
 }
 
