--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -83,4 +83,11 @@ dependencies {
     implementation 'com.amap.api:location:latest.integration'
     // adapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
+    // 微信mars
+    implementation 'com.tencent.mars:mars-core:1.2.0'
+    // 腾讯数据库
+    implementation 'com.tencent.wcdb:wcdb-android:1.0.8'
+    // 底部导航
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
+    implementation "com.android.support:design:28.0.0"
 }
