--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -9,8 +9,8 @@ dependencies {
 //    implementation 'com.android.support:cardview-v7:28.0.0'
 //    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // 以上support包依赖全部迁移到androidx
-    implementation project(path: ':annotationLib')
-    annotationProcessor project(path: ':annotationLib')
+    // 自定义编译时注解
+    implementation project(path: ':annotation_api')
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
@@ -100,4 +100,8 @@ dependencies {
     implementation 'com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:3.0.0-alpha2'
     implementation 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.0.0-alpha2'
     implementation 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.0.0-alpha2'
+    // 七牛oss
+    implementation 'com.qiniu:qiniu-android-sdk:7.3.15'
+    // excel实现
+    implementation 'cn.zhouchaoyuan:excelpanel:1.0.5'
 }
