--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':easeui', ':buildSrc', ':annotationLib'
+include ':app', ':easeui', ':buildSrc', ':annotationLib', ':annotation_api'
