--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     implementation 'com.facebook.fresco:fresco:1.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     // 语音识别相关的依赖
     implementation 'ai.api:sdk:1.10.0@aar'
@@ -54,7 +56,12 @@ dependencies {
 
     //dagger 依赖
     implementation 'com.google.dagger:dagger:2.22.1'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.22.1'
+    implementation "com.google.dagger:dagger-android-support:2.22.1"
+    implementation 'com.google.dagger:dagger-android:2.22.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.22.1'
+    kapt 'com.google.dagger:dagger-compiler:2.21'
+
 
     implementation 'com.google.android:flexbox:1.1.0'
     // 动画库
@@ -104,4 +111,8 @@ dependencies {
     implementation 'com.qiniu:qiniu-android-sdk:7.3.15'
     // excel实现
     implementation 'cn.zhouchaoyuan:excelpanel:1.0.5'
+    // 日志拦截器
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    // autodisposed
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.2.0'
 }
