--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -17,6 +17,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    kapt "com.jakewharton:butterknife-compiler:10.1.0"
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:10.1.0'
     implementation 'com.facebook.fresco:fresco:1.9.0'
@@ -96,8 +97,7 @@ dependencies {
     // 腾讯数据库
     implementation 'com.tencent.wcdb:wcdb-android:1.0.8'
     // 底部导航
-    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
-    implementation "com.android.support:design:28.0.0"
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
     // rxbinding
     implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0-alpha2'
     implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0-alpha2'
@@ -115,4 +115,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     // autodisposed
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.2.0'
+
+    // refresh
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-8'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-andx-8'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // 丰富的recyclerview
+    implementation 'com.marshalchen.ultimaterecyclerview:library:0.7.6'
 }
