--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,17 +53,17 @@
     <application
         android:name=".global.ForUApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/laucher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        tools:replace="android:allowBackup"
         android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup"
         tools:targetApi="n">
         <activity
-            android:theme="@style/SplashTheme"
             android:name=".app.main.activities.SplashActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.intent.action.VIEW"/>
@@ -79,8 +79,17 @@
             android:finishOnTaskLaunch="false"
             android:launchMode="singleInstance"
             android:theme="@style/HooliganActivityStyle"/>
-        <activity android:name=".app.main.activities.MainActivity"
+        <activity
+            android:name=".app.main.activities.MainActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".app.programming.activities.EssayDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".app.programming.activities.EssayListActivity"
+            android:screenOrientation="portrait"/>
+
+
         <!-- 以下是极光推送需要的 -->
         <!-- Required SDK 核心功能 -->
         <!-- 可配置 android:process 参数将 PushService 放在其他进程中 -->
