添加sophix热修复功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.qianyue.plugin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.aliyun.ams.emas-services'
 kapt {
     generateStubs = true
     arguments {
