用编译时注解写一个自动存,自动恢复的 现场保护框架

--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -11,6 +11,7 @@ dependencies {
     // 以上support包依赖全部迁移到androidx
     // 自定义编译时注解
     implementation project(path: ':annotation_api')
+    implementation project(path: ':j4ulib')
     kapt project(path: ':annotationLib')
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
