--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -10,9 +10,9 @@ dependencies {
 //    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // 以上support包依赖全部迁移到androidx
     // 自定义编译时注解
-    implementation project(path: ':annotation_api')
+    implementation project(path: ':j4u-annotations')
     implementation project(path: ':j4ulib')
-    kapt project(path: ':annotationLib')
+    kapt project(path: ':j4u-compiler')
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
